--- a/app/src/main/res/drawable/red_rectangle_background.xml
+++ b/app/src/main/res/drawable/red_rectangle_background.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#2F90BD" />
+    <solid
+        android:color="@android:color/holo_red_dark"/>
     <!-- padding设置内容区域离边界的间距 -->
     <padding
         android:bottom="2dp"
