--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -19,12 +19,17 @@
 
         <Button
             android:id="@+id/text_cancel"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
-            android:background="@drawable/button_oval_background"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/red_oval_background"
             android:gravity="center"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="0dp"
+            android:text="@string/text_cancel"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +42,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:background="@drawable/view_rectangle_background"
+            android:background="@drawable/selector_urgent_color"
             android:text="@string/urgent"
             android:textColor="@android:color/white"
             android:textSize="12sp"
@@ -50,10 +55,15 @@
             android:id="@+id/text_clock"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="18dp"
             android:layout_marginStart="18dp"
-            android:background="@drawable/button_oval_background"
+            android:background="@drawable/non_oval_background"
             android:gravity="center"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="0dp"
+            android:text="@string/text_clock"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_urgent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -62,22 +72,32 @@
             android:id="@+id/text_edit"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="18dp"
             android:layout_marginStart="18dp"
-            android:background="@drawable/button_oval_background"
+            android:background="@drawable/non_oval_background"
             android:gravity="center"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="0dp"
+            android:text="@string/text_color"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_clock"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/text_confirm"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
-            android:background="@drawable/button_oval_background"
+            android:background="@drawable/green_oval_background"
             android:gravity="center"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="0dp"
+            android:text="@string/text_confirm"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_edit"
             app:layout_constraintTop_toTopOf="parent" />
@@ -110,17 +130,15 @@
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="@string/edit_content_hint"
         android:background="@drawable/edittext_focus_background"
+        android:ems="10"
+        android:gravity="start"
+        android:hint="@string/edit_content_hint"
         android:inputType="textMultiLine"
         android:textColor="#666666"
         android:textSize="16sp"
-        android:gravity="top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
