--- a/app/src/main/res/layout/activity_memo.xml
+++ b/app/src/main/res/layout/activity_memo.xml
@@ -9,10 +9,10 @@
 
     <TextView
         android:id="@+id/memo_title"
-        android:layout_width="110dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Oh!MEMO"
         android:textColor="@color/shallow_memo"
         android:textSize="24sp"
@@ -55,7 +55,7 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:gravity="center"
-            android:text="@string/add_text"
+            android:text="@string/memo_addtask"
             android:textSize="24sp"
             android:textStyle="bold" />
 
