--- a/app/src/main/res/layout/item_.xml
+++ b/app/src/main/res/layout/item_.xml
@@ -10,6 +10,9 @@
         android:layout_height="match_parent"
         android:textColor="@android:color/black"
         android:background="#c1c1c1"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
 
 </LinearLayout>
