main page,but view should rebuild

--- a/app/src/main/res/layout/memo_recycle_text.xml
+++ b/app/src/main/res/layout/memo_recycle_text.xml
@@ -8,44 +8,65 @@
 
 
     <Button
-        android:id="@+id/memo_type"
+        android:id="@+id/memo_type_text"
         android:layout_width="37dp"
         android:layout_height="36dp"
 
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="45dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/red_oval_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/memo_alarm"
+        android:id="@+id/memo_alarm_text"
         android:layout_width="34dp"
         android:layout_height="30dp"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="46dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/red_oval_background"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/memo_type" />
+        app:layout_constraintTop_toBottomOf="@+id/memo_type_text" />
 
     <TextView
-        android:id="@+id/memo_texttitle"
+        android:id="@+id/memo_text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textColor="@color/alarm_true"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/memo_type"
+        app:layout_constraintStart_toEndOf="@+id/memo_type_text"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/memo_texttime"
+        android:id="@+id/memo_text_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="21dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/memo_alarm"
-        app:layout_constraintTop_toBottomOf="@+id/memo_texttitle" />
+        android:textColor="@color/colorAccent"
+        app:layout_constraintStart_toEndOf="@+id/memo_alarm_text"
+        app:layout_constraintTop_toBottomOf="@+id/memo_text_title" />
+
+    <Button
+        android:id="@+id/memo_text_delete"
+        android:layout_width="46dp"
+        android:layout_height="37dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/red_oval_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/memo_text_urgent"
+        android:layout_width="25dp"
+        android:layout_height="0dp"
+        android:background="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
