--- a/app/src/main/res/drawable/red_rectangle_background.xml
+++ b/app/src/main/res/drawable/red_rectangle_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@android:color/holo_red_dark"/>
+        android:color="@color/urgent_true"/>
     <!-- padding设置内容区域离边界的间距 -->
     <padding
         android:bottom="2dp"
