--- a/app/src/main/res/layout/activity_audio_recording.xml
+++ b/app/src/main/res/layout/activity_audio_recording.xml
@@ -61,6 +61,7 @@
         android:textColor="@color/white"/>
 
     <Button
+        android:id="@+id/recording_shade"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="3dp"
@@ -69,4 +70,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/recording_btn"
         app:layout_constraintTop_toTopOf="@+id/recording_btn"/>
+
+    <Button
+        android:id="@+id/recording_back"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginRight="36dp"
+        android:background="@color/white"
+        android:layout_marginLeft="80dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/recording_title"
+        app:layout_constraintTop_toTopOf="@+id/recording_title"/>
 </android.support.constraint.ConstraintLayout>
