--- a/app/src/main/res/layout/activity_audio_view.xml
+++ b/app/src/main/res/layout/activity_audio_view.xml
@@ -3,15 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/audio_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.AudioSettingActivity">
+    android:id="@+id/audio_view_parent"
+    tools:context=".view.AudioViewActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
-    <include android:id="@+id/audio_view_title" layout="@layout/title_record"/>
-
+    <include android:id="@+id/audio_view_title" layout="@layout/title_view"/>
+    <include android:id="@+id/audio_view_edit_title" layout="@layout/title_edit" android:visibility="invisible"/>
     <EditText
-        android:id="@+id/edit_title_audio"
+        android:id="@+id/edit_audio_view_title"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
@@ -21,15 +23,16 @@
         android:ems="10"
         android:hint="@string/edit_title_hint_audio"
         android:inputType="textPersonName"
-        android:textColor="@color/lunarTextColor"
+        android:textColor="@color/audio_title"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/audio_view_title"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@id/audio_view_edit_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <com.shining.memo.widget.RoundProgressBar
-        android:id="@+id/roundProgress"
+        android:id="@+id/roundProgress_view"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="180dp"
@@ -38,12 +41,12 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@id/edit_title_audio"
+        app:layout_constraintTop_toBottomOf="@id/edit_audio_view_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/image_mic_audio"
+        android:id="@+id/image_mic_audio_view"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginEnd="16dp"
@@ -51,12 +54,12 @@
         android:layout_marginTop="93dp"
         android:src="@drawable/audio_type_icon_48x48px"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@id/edit_title_audio"
+        app:layout_constraintTop_toBottomOf="@id/edit_audio_view_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
-        android:id="@+id/audio_rerecording"
+        android:id="@+id/audio_view_rerecording"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginEnd="20dp"
@@ -71,4 +74,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
