--- a/app/src/main/res/layout/title_edit.xml
+++ b/app/src/main/res/layout/title_edit.xml
@@ -18,7 +18,7 @@
         android:layout_height="55dp"
         android:background="@color/alarm_background">
     <Button
-        android:id="@+id/title_cancel"
+        android:id="@+id/title_edit_cancel"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="16dp"
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/title_urgent"
+        android:id="@+id/title_edit_urgent"
         android:layout_width="72dp"
         android:layout_height="24dp"
         android:background="@drawable/selector_urgent_color"
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/title_alarm"
+        android:id="@+id/title_edit_alarm"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="18dp"
@@ -55,11 +55,11 @@
         android:minWidth="0dp"
         android:padding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/title_urgent"
+        app:layout_constraintStart_toEndOf="@+id/title_edit_urgent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/title_edit"
+        android:id="@+id/title_edit_edit"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="18dp"
@@ -69,11 +69,11 @@
         android:minWidth="0dp"
         android:padding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/title_alarm"
+        app:layout_constraintStart_toEndOf="@+id/title_edit_alarm"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/title_confirm"
+        android:id="@+id/title_edit_confirm"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginEnd="18dp"
