--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,8 @@
     <!--alarm color-->
     <color name="alarm_true">#ff4081</color>
     <color name="alarm_false">#e0e0e0</color>
+
+    <color name="audio_title">#666666</color>
+    <color name="urgent_true">#FF4C4C</color>
+    <color name="recording">#548B54</color>
 </resources>
