--- a/app/src/main/res/layout-land/activity_audio_edit.xml
+++ b/app/src/main/res/layout-land/activity_audio_edit.xml
@@ -19,9 +19,9 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext_focus_background"
         android:ems="10"
-        android:hint="@string/edit_title_hint_audio"
+        android:hint="@string/edit_title_hint"
         android:inputType="textPersonName"
-        android:textColor="@color/audio_title"
+        android:textColor="@color/recording_title"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textAlignment="center"
