--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,10 @@
     <color name="alarm_true">#ff4081</color>
     <color name="alarm_false">#e0e0e0</color>
 
-    <color name="audio_title">#666666</color>
     <color name="urgent_true">#FF4C4C</color>
     <color name="recording">#548B54</color>
+
+    <color name="recording_title">#666666</color>
+    <color name="content_background">#FAFAFA</color>
+    <color name="underline_background">#EEEEEE</color>
 </resources>
