--- a/app/src/main/res/layout/activity_audio_edit.xml
+++ b/app/src/main/res/layout/activity_audio_edit.xml
@@ -13,7 +13,7 @@
     <include android:id="@+id/audio_edit_title" layout="@layout/title_edit"/>
 
     <EditText
-        android:id="@+id/edit_title_audio"
+        android:id="@+id/list_title"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
@@ -42,7 +42,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@id/edit_title_audio"
+        app:layout_constraintTop_toBottomOf="@id/list_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -55,7 +55,7 @@
         android:layout_marginTop="93dp"
         android:src="@drawable/audio_type_icon_48x48px"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@id/edit_title_audio"
+        app:layout_constraintTop_toBottomOf="@id/list_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
