--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -80,9 +80,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="@string/please_input_title_of_list"
+        android:hint="@string/hint_list_title"
         android:inputType="textPersonName"
-        android:textColor="@color/audio_title"
+        android:textColor="@color/recording"
         android:textSize="24sp"
         android:textStyle="bold"
         android:paddingBottom="16dp"
