--- a/app/src/main/res/layout/activity_recording_edit.xml
+++ b/app/src/main/res/layout/activity_recording_edit.xml
@@ -2,34 +2,39 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:background="@color/content_background">
 
-    <include android:id="@+id/recording_edit_title" layout="@layout/title_edit" />
+    <include
+        android:id="@+id/recording_edit_title"
+        layout="@layout/title_edit"
+        tools:ignore="MissingConstraints" />
+
     <EditText
         android:id="@+id/recording_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="40dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="21.5dp"
-        android:paddingLeft="3dp"
-        android:paddingRight="3dp"
+        android:layout_marginEnd="16dp"
         android:background="@null"
         android:ems="10"
         android:hint="@string/edit_title_hint"
         android:inputType="textMultiLine"
+        android:minHeight="40dp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:textAlignment="center"
         android:textColor="@color/recording_title"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/recording_edit_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recording_edit_title" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="2dp"
@@ -40,31 +45,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recording_title" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recording_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="27.5dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/content_background"
-        app:layout_constraintBottom_toTopOf="@id/audio_rerecording"
+        android:descendantFocusability="afterDescendants"
+        app:layout_constraintBottom_toTopOf="@+id/audio_recording"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recording_title"/>
+        app:layout_constraintTop_toBottomOf="@id/recording_title" />
+
     <Button
         android:id="@+id/audio_recording"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="10dp"
+        android:background="@color/alarm_background"
         android:text="@string/audio_recording_btnText"
         android:textAllCaps="false"
-        android:background="@color/alarm_background"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <include
+        android:id="@+id/lineHeight"
+        layout="@layout/item_recording_text"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints"></include>
 </android.support.constraint.ConstraintLayout>
