--- a/app/src/main/res/layout/item_recording_audio.xml
+++ b/app/src/main/res/layout/item_recording_audio.xml
@@ -4,13 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <Button
-        android:id="@+id/item_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/audio_rerecording_shape"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:ignore="MissingConstraints">
+
+        <Button
+            android:id="@+id/item_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/audio_rerecording_shape"
+            android:layout_gravity="center_vertical"/>
+
+        <EditText
+            android:id="@+id/btn_edit"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="23dp"
+            android:background="@null"
+            android:gravity="bottom"
+            android:paddingBottom="5dp"
+
+            android:paddingTop="10dp"
+            android:singleLine="true"
+            android:textColor="@color/alarm_background"
+            android:textSize="16dp" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
