--- a/app/src/main/res/layout/item_recording_text.xml
+++ b/app/src/main/res/layout/item_recording_text.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true">
     <com.shining.memo.widget.NoteEditText
         android:id="@+id/item_editText"
         android:layout_width="match_parent"
@@ -12,6 +13,7 @@
         android:lineSpacingExtra="10dp"
         android:lineSpacingMultiplier="1.5"
         android:textSize="16dp"
+        android:duplicateParentState="true"
         android:textColor="@color/alarm_background"
         android:inputType="textMultiLine"
         android:paddingLeft="5dp"
