--- a/app/src/main/res/layout/item_edit.xml
+++ b/app/src/main/res/layout/item_edit.xml
@@ -6,6 +6,7 @@
     android:layout_height="45dp"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/white_rectangle_background">
 
     <TextView
@@ -28,7 +29,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:textColor="@color/add_new"
-        android:hint="@string/item_content"
+        android:hint="@string/item"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
