--- a/app/src/main/res/drawable/cursor.xml
+++ b/app/src/main/res/drawable/cursor.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <size android:width="1dp" />
-
-    <solid android:color="@color/colorPrimary" />
+    <size android:width="3dp" />
+    <solid android:color="@color/item_btn_textcolor" />
     <padding
         android:top="0dp"
-        android:bottom="-10dp" />
+        android:bottom="0dp" />
 </shape>
