--- a/app/src/main/res/drawable/orange_rectangle_background.xml
+++ b/app/src/main/res/drawable/orange_rectangle_background.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/half_transparent_orange"></solid>
+    <solid
+        android:color="@color/item_btn_textcolor"/>
     <!-- padding设置内容区域离边界的间距 -->
     <!--<padding-->
         <!--android:bottom="2dp"-->
-        <!--android:left="2dp"-->
-        <!--android:right="2dp"-->
+
         <!--android:top="2dp" />-->
     <!-- corners设置圆角，只适用于rectangle -->
-    <corners android:radius="200dp" />
-
+    <corners android:radius="200dp"/>
 </shape>
