--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -95,6 +95,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:checked="true"
+            android:thumb="@drawable/urgent_thumb_selector"
+            android:track="@drawable/urgent_track_selector"
             app:layout_constraintBottom_toTopOf="@+id/set_reminder_line"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -126,6 +128,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:thumb="@drawable/urgent_thumb_selector"
+            android:track="@drawable/urgent_track_selector"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/set_reminder_line" />
