--- a/app/src/main/res/layout/item_recording_audio.xml
+++ b/app/src/main/res/layout/item_recording_audio.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,28 +11,45 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
-
+        <EditText
+            android:id="@+id/btn_edit_strat"
+            android:layout_width="15dp"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:gravity="right|center_vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="10dp"
+            android:singleLine="true"
+            android:textCursorDrawable="@drawable/cursor"
+            android:textColor="@color/alarm_background"
+            android:textSize="25dp" />
         <Button
             android:id="@+id/item_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginTop="5dp"
+            android:layout_width="139.5dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/audio_rerecording_shape"
-            android:layout_gravity="center_vertical"/>
-
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:textColor="@color/item_btn_textcolor"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:paddingLeft="22dp"
+            android:drawablePadding="15dp"
+            />
         <EditText
             android:id="@+id/btn_edit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="23dp"
             android:background="@null"
-            android:gravity="bottom"
+            android:gravity="left|center_vertical"
             android:paddingBottom="5dp"
-
             android:paddingTop="10dp"
             android:singleLine="true"
+            android:imeOptions="actionNext"
+            android:textCursorDrawable="@drawable/cursor"
             android:textColor="@color/alarm_background"
-            android:textSize="16dp" />
+            android:textSize="25dp" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
