--- a/app/src/main/res/layout/item_recording_text.xml
+++ b/app/src/main/res/layout/item_recording_text.xml
@@ -5,23 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true">
-    <com.shining.memo.widget.NoteEditText
+    <EditText
         android:id="@+id/item_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="40dp"
         android:lineSpacingExtra="10dp"
-        android:lineSpacingMultiplier="1.5"
-        android:textSize="16dp"
+        android:lineSpacingMultiplier="1"
+        android:textSize="18dp"
         android:duplicateParentState="true"
         android:textColor="@color/alarm_background"
-        android:inputType="textMultiLine"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:inputType="text|textCapSentences"
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp"
         android:background="@null"
-        android:paddingTop="12dp"
+        android:paddingTop="6dp"
         android:gravity="bottom"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionNext"
         android:textCursorDrawable="@drawable/cursor"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
