--- a/app/src/main/res/layout/item_recording_text.xml
+++ b/app/src/main/res/layout/item_recording_text.xml
@@ -15,13 +15,13 @@
         android:textSize="18dp"
         android:duplicateParentState="true"
         android:textColor="@color/alarm_background"
-        android:inputType="text|textCapSentences"
+        android:inputType="textMultiLine"
         android:paddingLeft="14dp"
         android:paddingRight="14dp"
         android:background="@null"
         android:paddingTop="6dp"
         android:gravity="bottom"
-        android:imeOptions="actionNext"
+        android:imeOptions="actionNone"
         android:textCursorDrawable="@drawable/cursor"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
