--- a/app/src/main/res/layout/activity_recording_edit.xml
+++ b/app/src/main/res/layout/activity_recording_edit.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recroding_edit_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
@@ -24,11 +25,13 @@
         android:minHeight="40dp"
         android:paddingLeft="3dp"
         android:paddingRight="3dp"
-        android:textAlignment="center"
+        android:textAlignment="gravity"
+        android:gravity="center_vertical|left"
         android:textColor="@color/recording_title"
         android:textSize="20dp"
         android:textStyle="bold"
         android:imeOptions="actionNext"
+        android:textCursorDrawable="@drawable/cursor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
