--- a/app/src/main/res/layout/bottom_recording_audio.xml
+++ b/app/src/main/res/layout/bottom_recording_audio.xml
@@ -2,30 +2,54 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent">
-    <RelativeLayout
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center_vertical">
+
         <ImageView
-            android:layout_alignParentStart="true"
             android:id="@+id/bottom_audio_image"
             android:layout_width="22dp"
             android:layout_height="22dp"
-            android:src="@drawable/audio_recording_icon"/>
+            android:src="@drawable/audio_recording_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/audio_time_duration"
-            android:layout_toEndOf="@+id/bottom_audio_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:text="@string/audio_time_length"
+            android:textColor="@color/item_btn_textcolor"
             android:textSize="16dp"
             android:textStyle="bold"
-            android:textColor="@color/item_btn_textcolor"
-            android:text="@string/audio_time_length"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/bottom_audio_image"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/audio_cancel"
+            android:layout_width="60dp"
+            android:layout_height="23dp"
+            android:layout_alignParentEnd="true"
+            android:background="@null"
+            android:text="@string/audio_cancel"
+            android:textColor="@color/half_transparent_orange"
+            android:textSize="16dp"
+            android:textStyle="normal"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/audio_finish"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <Button
             android:id="@+id/audio_finish"
             android:layout_width="60dp"
@@ -33,8 +57,11 @@
             android:layout_alignParentEnd="true"
             android:background="@null"
             android:text="@string/audio_finish"
-            android:textColor="@color/half_transparent_orange"
+            android:textColor="@color/item_btn_textcolor"
             android:textSize="16dp"
-            android:textStyle="normal" />
-    </RelativeLayout>
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
