--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,5 +37,5 @@
     <color name="item_btn_textcolor">#FF8833 </color>
     <color name="half_transparent_orange">#8EFF8833 </color>
     <color name="photo_divider">#EEEEEE</color>
-
+    <color name="photo_shelter">#8E000000</color>
 </resources>
